Seeder runs perfectly now.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9838,7 +9838,7 @@ ul.contains-task-list li.task-list-item input:checked {
 }
 
 .simple_footer {
-  background-color: #0457b1;
+  background-color: var(--primary);
 }
 
 .scroll.mCustomScrollbar _mCS_2 {
