--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -302,8 +302,8 @@
         <div class="modal-dialog help_form" role="document">
             <div class="modal-content">
                 <div class="shortcode_title">
-                    <h1>How can we help?</h1>
-                    <p>A premium WordPress theme with integrated Knowledge Base,<br>providing 24/7 community based support.</p>
+                    {% comment %} <h1>How can we help?</h1>
+                    <p>A premium doc with integrated Knowledge Base,<br>providing 24/7 community based support.</p> {% endcomment %}
                 </div>
                 <form action="#" class="contact_form">
                     <div class="form-group">
@@ -334,8 +334,8 @@
         <div class="modal-dialog help_form" role="document">
             <div class="modal-content">
                 <div class="shortcode_title">
-                    <h1>How can we help?</h1>
-                    <p>A premium WordPress theme with integrated Knowledge Base,<br>providing 24/7 community based support.</p>
+                    {% comment %} <h1>How can we help?</h1>
+                    <p>A premium WordPress theme with integrated Knowledge Base,<br>providing 24/7 community based support.</p> {% endcomment %}
                 </div>
                 <form action="#" class="contact_form">
                     <div class="form-group">
