--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="doc_banner_text">
                     <h3 class="wow fadeInUp text-white" data-wow-delay="0.3s">Search For A Note</h3>
-                    {% comment %} <p class="wow fadeInUp" data-wow-delay="0.5s">we're here for you. Find articles, help and advice for getting the most our of docall theme</p> {% endcomment %}
+                    {% comment %} <p class="wow fadeInUp" data-wow-delay="0.5s">we're here for you. Find articles, help and advice for getting the most our of docall Doc</p> {% endcomment %}
                     <form action="{% url 'search' %}" class="banner_search_form">
                         <input name="search_input" type="search" class="form-control" placeholder='Search ("/" to focus)'>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -88,8 +88,8 @@
                                         <div class="line"></div>
                                     </div>
                                     <ul class="list-unstyled tag_list">
-                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Theme</a></li>
-                                        <li><a href="#"><i class="icon_document_alt"></i>Theme license information</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Doc</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>Doc license information</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do i create tree structure menu</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
@@ -188,8 +188,8 @@
                                         <div class="line"></div>
                                     </div>
                                     <ul class="list-unstyled tag_list">
-                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Theme</a></li>
-                                        <li><a href="#"><i class="icon_document_alt"></i>Theme license information</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Doc</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>Doc license information</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do i create tree structure menu</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
@@ -288,8 +288,8 @@
                                         <div class="line"></div>
                                     </div>
                                     <ul class="list-unstyled tag_list">
-                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Theme</a></li>
-                                        <li><a href="#"><i class="icon_document_alt"></i>Theme license information</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Doc</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>Doc license information</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do i create tree structure menu</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
@@ -388,8 +388,8 @@
                                         <div class="line"></div>
                                     </div>
                                     <ul class="list-unstyled tag_list">
-                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Theme</a></li>
-                                        <li><a href="#"><i class="icon_document_alt"></i>Theme license information</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Doc</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>Doc license information</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do i create tree structure menu</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
@@ -488,8 +488,8 @@
                                         <div class="line"></div>
                                     </div>
                                     <ul class="list-unstyled tag_list">
-                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Theme</a></li>
-                                        <li><a href="#"><i class="icon_document_alt"></i>Theme license information</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>How To Install Manual Doc</a></li>
+                                        <li><a href="#"><i class="icon_document_alt"></i>Doc license information</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do i create tree structure menu</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
                                         <li><a href="#"><i class="icon_document_alt"></i>How do I login forum section</a></li>
