--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -292,71 +292,9 @@
             </div>
         </footer>
     </div>
-    <div class="modal fade img_modal" id="exampleModal2" tabindex="-2" role="dialog" aria-hidden="false">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <i class=" icon_close"></i>
-        </button>
-        <div class="modal-dialog help_form" role="document">
-            <div class="modal-content">
-                <div class="shortcode_title">
-                    {% comment %} <h1>How can we help?</h1>
-                    <p>A premium doc with integrated Knowledge Base,<br>providing 24/7 community based support.</p> {% endcomment %}
-                </div>
-                <form action="#" class="contact_form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Subject">
-                    </div>
-                    <div class="form-group">
-                        <textarea name="Message" id="massage" placeholder="Massage"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn action_btn">Send</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-
-    <!-- How can we help? Form Modal -->
-    <div class="modal fade img_modal" id="exampleModal3" tabindex="-3" role="dialog" aria-hidden="false">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <i class=" icon_close"></i>
-        </button>
-        <div class="modal-dialog help_form" role="document">
-            <div class="modal-content">
-                <div class="shortcode_title">
-                    {% comment %} <h1>How can we help?</h1>
-                    <p>A premium WordPress theme with integrated Knowledge Base,<br>providing 24/7 community based support.</p> {% endcomment %}
-                </div>
-                <form action="#" class="contact_form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Subject">
-                    </div>
-                    <div class="form-group">
-                        <textarea name="Message" id="massage" placeholder="Massage"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn action_btn">Send</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js' %}, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="{% static 'js/pre-loader.js' %}"> </script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
