I have updated the push token for the research notes project.

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,17 +22,17 @@
 </head>
 
 <body data-scroll-animation="true">
-    <div id="preloader">
+    {% comment %} <div id="preloader">
         <div id="ctn-preloader" class="ctn-preloader">
             <div class="round_spinner">
                 <div class="spinner"></div>
                 <div class="text">
                     <img class='loader-img' src="{% static 'img/my-static/folders.png' %}" alt="">
-                    {% comment %} <h4><span>Personal Notes</span></h4> {% endcomment %}
+                    {% comment %} <h4><span>Personal Notes</span></h4> {% endcomment %
                 </div>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %}
     <div class="click_capture"></div>
     <div class="body_wrapper">
         <nav class="navbar navbar-expand-lg menu_one" id="sticky">
