--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -25,17 +25,17 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
-    <div id="preloader">
+    {% comment %} <div id="preloader">
         <div id="ctn-preloader" class="ctn-preloader">
             <div class="round_spinner">
                 <div class="spinner"></div>
                 <div class="text">
                     <img class="loader-img" src="{% static 'img/my-static/folders.png' %}" alt="">
-                    {% comment %} <h4 class="px-4 pt-1" style="font-size: 25px"><span>Personal Notes</span></h4> {% endcomment %}
+                    {% comment %} <h4 class="px-4 pt-1" style="font-size: 25px"><span>Personal Notes</span></h4> {% endcomment %
                 </div>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %}
     <div class="body_wrapper">
         <nav class="navbar navbar-expand-lg menu_one display_none">
             <div class="container custom_container">
