--- a/templates/login.html
+++ b/templates/login.html
@@ -18,17 +18,17 @@
 </head>
 
 <body data-scroll-animation="true">
-    <div id="preloader">
+    {% comment %} <div id="preloader">
         <div id="ctn-preloader" class="ctn-preloader">
             <div class="round_spinner">
                 <div class="spinner"></div>
                 <div class="text">
                     <img class='loader-img' src="{% static 'img/my-static/folders.png' %}" alt="">
-                    {% comment %} <h4><span>Personal Notes</span></h4> {% endcomment %}
+                    {% comment %} <h4><span>Personal Notes</span></h4> {%  %}
                 </div>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %}
     <div class="body_wrapper">
         <section class="signup_area">
             <div class="row ml-0 mr-0">
